--- a/practice/src/app/shared/components/pagination/pagination.component.scss
+++ b/practice/src/app/shared/components/pagination/pagination.component.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
 
     .description {
       position: absolute;
@@ -21,9 +22,8 @@
     }
 
     .numbers {
-      display: block;
-      text-align: center;
-      flex: 1;
+      display: flex;
+      text-align: center;     
 
       button {
         flex: 0 0 auto;
@@ -33,8 +33,12 @@
         background: transparent;
         cursor: pointer;
 
+        &.link {
+            display: flex;
+        }
+
         &.active {
-        //   @extend .h6;
+            color: red;
         }
 
         &.disabled {
@@ -45,7 +49,5 @@
     }
   }
 
-  .active {
-      color: red;
-  }
+
 
