work with pagination component

--- a/practice/src/app/films-catalog/films-list/films-list.component.html
+++ b/practice/src/app/films-catalog/films-list/films-list.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="!spiner" class="cards-section">
 
-  <div class="btn-back" fxLayout="row wrap" fxLayoutAlign="end" fxLayoutAlign.lt-sm="center">
+  <!-- <div class="btn-back" fxLayout="row wrap" fxLayoutAlign="end" fxLayoutAlign.lt-sm="center">
     <button mat-stroked-button (click)="firstPage()">в начало</button>
-  </div>
+  </div> -->
 
   <div class="cards-header" fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
     <h2>{{totalResult}} фильмов</h2>
