add pagination on filmslist component

--- a/practice/src/app/films-catalog/films-list/films-list.component.html
+++ b/practice/src/app/films-catalog/films-list/films-list.component.html
@@ -25,6 +25,7 @@
 
       <app-pagination 
         (firstPageEmit)="firstPage($event)"
+        (lastPageEmit)="lastPage($event)"
         (goPage)="goToPage($event)"
         (goNext)="onNext()"
         (goPrev)="onPrev()"
