--- a/practice/src/app/shared/components/pagination/pagination.component.html
+++ b/practice/src/app/shared/components/pagination/pagination.component.html
@@ -1,33 +1,38 @@
 <div class="pagination" *ngIf="count > 0">
-  <!-- <div class="description">
-    <span class="page-counts">{{ getMin() }} - {{ getMax() }} of {{ count }}</span>
-    <span class="page-totals">{{ totalPages() }} pages</span>
-  </div> -->
   <div class="numbers">
-
-    <button class="link" (click)="firstPage()" [disabled]="page === 1 || loading"
-      [ngClass]="{ 'disabled': page === 1 || loading }">
+    <button 
+      class="link" 
+      (click)="firstPage()" 
+      [disabled]="page === 1"
+      [ngClass]="{ 'disabled': page === 1 }">
       <i class="material-icons">first_page</i>
     </button>
-
-    <button class="link" (click)="onPrev()" [disabled]="page === 1 || loading"
-      [ngClass]="{ 'disabled': page === 1 || loading }">
+    <button 
+      class="link" 
+      (click)="onPrev()" 
+      [disabled]="page === 1 "
+      [ngClass]="{ 'disabled': page === 1 }">
       <i class="material-icons">chevron_left</i>
     </button>
-
-    <button *ngFor="let pageNum of getPages()" (click)="onPage(pageNum)"
-      [ngClass]="{'active': pageNum === page, 'disabled': loading}">{{ pageNum }}</button>
-
-    <button class="link" (click)="onNext(true)" [disabled]="page === 500 || loading"
-      [ngClass]="{ 'disabled': page === 500 || loading }">
+    <button 
+      *ngFor="let pageNum of getPages()" 
+      (click)="onPage(pageNum)"
+      [ngClass]="{'active': pageNum === page }"
+    >{{ pageNum }}
+    </button>
+    <button 
+      class="link" 
+      (click)="onNext(true)" 
+      [disabled]="page === 500"
+      [ngClass]="{ 'disabled': page === 500}">
       <i class="material-icons">chevron_right</i>
     </button>
-
-    <button class="link" (click)="lastPage()" [disabled]="page === 500 || loading"
-          [ngClass]="{ 'disabled': page === 500 || loading }">
-          <i class="material-icons">last_page</i>
+    <button 
+      class="link" 
+      (click)="lastPage()" 
+      [disabled]="page === 500"
+      [ngClass]="{ 'disabled': page === 500}">
+      <i class="material-icons">last_page</i>
     </button>
-
-
   </div>
 </div>
