--- a/practice/src/app/shared/components/pagination/pagination.component.scss
+++ b/practice/src/app/shared/components/pagination/pagination.component.scss
@@ -1,56 +1,50 @@
+.pagination {
+  width: 100%;
+  position: relative;
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 
+  .description {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    left: 20%;
 
-  .pagination {
-
-
-    width: 100%;
-    position: relative;
-    flex: 1;
-    // background: grey;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-
-    .description {
-      position: absolute;
-      top: 50%;
-      transform: translate(0, -50%);
-      left: 20%;
-
-      .page-counts {
-        margin-right: 20% * 2;
-      }
-    }
-
-    .numbers {
-      display: flex;
-      text-align: center;     
-
-      button {
-        flex: 0 0 auto;
-        outline: none;
-        border: 0;
-              font-family: 'Montserrat',
-              sans-serif;
-        background: transparent;
-        cursor: pointer;
-
-        &.link {
-            display: flex;
-        }
-
-        &.active {
-            color: red;
-        }
-
-        &.disabled {
-          cursor: not-allowed;
-          color: lightgrey;
-        }
-      }
+    .page-counts {
+      margin-right: 20% * 2;
     }
   }
 
+  .numbers {
+    display: flex;
+    text-align: center;
 
+    button {
+      flex: 0 0 auto;
+      outline: none;
+      border: 0;
+      font-family: 'Montserrat',
+      sans-serif;
+      background: transparent;
+      cursor: pointer;
 
+      &.link {
+        display: flex;
+      }
+
+      &.active {
+        font-weight: bold;
+        color: #f44336;
+        font-size: 16px;
+      }
+
+      &.disabled {
+        cursor: not-allowed;
+        color: lightgrey;
+      }
+    }
+  }
+}
