work with pagination

--- a/practice/src/app/films-catalog/films-list/films-list.component.html
+++ b/practice/src/app/films-catalog/films-list/films-list.component.html
@@ -14,8 +14,8 @@
         (goPage)="goToPage($event)"
         (goNext)="onNext()"
         (goPrev)="onPrev()"
-        [pagesToShow]="9"
-        [page]="pagePag"
+      
+        [page]="page"
         [perPage]="limit"
         [count]="total">
       </app-pagination>
