work with pagination

--- a/practice/src/app/films-catalog/films-list/films-list.component.html
+++ b/practice/src/app/films-catalog/films-list/films-list.component.html
@@ -13,11 +13,9 @@
       <app-pagination         
         (goPage)="goToPage($event)"
         (goNext)="onNext()"
-        (goPrev)="onPrev()"
-      
-        [page]="page"
-        [perPage]="limit"
-        [count]="total">
+        (goPrev)="onPrev()"      
+        [page]="page"      
+        [totalPages]="totalPages">
       </app-pagination>
     </div>
   </div>
