work with pagination

--- a/practice/src/app/films-catalog/films-list/films-list.component.html
+++ b/practice/src/app/films-catalog/films-list/films-list.component.html
@@ -6,8 +6,14 @@
     </div>
   </div>
   <div class="cards" fxLayout="row wrap" fxLayoutAlign="space-evenly start">
-    <app-film-item class="film-item" fxFlex="31%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="film"
-      (updateListOfFavorite)="addFilmToFavorit($event)" *ngFor="let film of films">
+    <app-film-item 
+      class="film-item" 
+      fxFlex="31%" 
+      fxFlex.lt-md="45%" 
+      fxFlex.lt-sm="100%" 
+      [data]="film"
+      (updateListOfFavorite)="addFilmToFavorit($event)" 
+      *ngFor="let film of films">
     </app-film-item>
     <div class="pagination-section">
       <app-pagination         
