--- a/practice/src/app/films-catalog/actors-list/actors-list.component.scss
+++ b/practice/src/app/films-catalog/actors-list/actors-list.component.scss
@@ -35,6 +35,7 @@
   margin-top: 30px;
 }
 
-.btn-section {
-  margin: 10px 0 40px;
+.pagination-section {
+  margin: 20px 0 40px;
+  width: 100%;
 }
