add pagination to actors list

--- a/practice/src/app/films-catalog/actors-list/actors-list.component.html
+++ b/practice/src/app/films-catalog/actors-list/actors-list.component.html
@@ -2,7 +2,7 @@
   <div class="cards-header" fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
     <h2>{{totalResult}} актеров</h2>
     <div>
-      <p>Страница: {{pageCount}} из {{totalPages}}</p>     
+      <p>Страница: {{page}} из {{totalPages}}</p>     
     </div>
   </div>
 
