--- a/practice/src/app/films-catalog/favorites-list/favorites-list.component.html
+++ b/practice/src/app/films-catalog/favorites-list/favorites-list.component.html
@@ -1,22 +1,20 @@
 <div *ngIf="!spinner" class="cards-section">
-
   <div class="cards-header" fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
     <h2>{{totalResult}} фильмов</h2>
     <div>
       <p>Страница: {{page}} из {{totalPages}}</p>
     </div>
   </div>
-
   <div class="cards" fxLayout="row wrap" fxLayoutAlign="space-evenly start">
-    <app-film-item class="film-item" fxFlex="31%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="film"
-      (updateListOfFavorite)="addFilmToFavorit($event)" *ngFor="let film of films">
+    <app-film-item 
+      class="film-item" 
+      fxFlex="31%" 
+      fxFlex.lt-md="45%" 
+      fxFlex.lt-sm="100%" 
+      [data]="film"
+      (updateListOfFavorite)="addFilmToFavorit($event)" 
+      *ngFor="let film of films">
     </app-film-item>
-
-    <div class="row btn-section" fxLayout="row" fxLayoutAlign="center">
-      <button mat-raised-button color="primary" (click)="nextFilmsPage()" [disabled]="isDisabledFilmsBtn">
-        Показать еще
-      </button>
-    </div>
   </div>
 </div>
 
