--- a/practice/src/app/shared/components/film-details/film-details.component.html
+++ b/practice/src/app/shared/components/film-details/film-details.component.html
@@ -45,13 +45,13 @@
   <section>
     <mat-tab-group dynamicHeight>
       <mat-tab label="Актеры">
-        <div class="actors" fxLayout="row wrap" fxLayoutAlign="space-evenly start">
+        <div class="actors" fxLayout="row wrap" fxLayoutAlign="start start">
           <app-actor-item class="actor-item mb-2em" fxFlex="17%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="actor"
             *ngFor="let actor of film.people.cast"></app-actor-item>
         </div>
       </mat-tab>
       <mat-tab label="Съемочная группа">
-        <div class="actors" fxLayout="row wrap" fxLayoutAlign="space-evenly start">
+        <div class="actors" fxLayout="row wrap" fxLayoutAlign="start start">
           <app-actor-item class="actor-item mb-2em" fxFlex="17%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" [data]="actor"
             *ngFor="let actor of film.people.crew"></app-actor-item>
         </div>
