--- a/practice/src/app/films-catalog/main/main.component.html
+++ b/practice/src/app/films-catalog/main/main.component.html
@@ -19,11 +19,19 @@
         <button mat-stroked-button routerLink="/actors">Посмотреть всех актеров</button>
       </div>
       <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
-        <mat-card class="mb-2em" fxFlex="15%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" *ngFor="let actor of actors">
-          <div>
+        <mat-card class="mb-2em flipper" fxFlex="15%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%"
+          *ngFor="let actor of actors">
+          <div class="front">
             <img src="{{imgUrl + actor.profile_path}}" alt="">
-          </div>
-        </mat-card>
+          </div>  
+
+          <div class="back">
+            <img src="assets/logo.jpg" alt="">
+          </div>        
+        </mat-card>     
+
+
+        
       </div>
     </div>
   </div>
