--- a/practice/src/app/films-catalog/main/main.component.scss
+++ b/practice/src/app/films-catalog/main/main.component.scss
@@ -23,6 +23,10 @@
   padding: .5%;
   margin: 0;
   height: 280px;
+  transform: rotateY(180deg);
+ 
+
+
 
   div {
     width: 100%;
@@ -36,6 +40,88 @@
   }
 }
 
+.mat-card:nth-child(1) {
+  animation: rotateY .5s .5s ease forwards;
+}
+
+.mat-card:nth-child(2) {
+  animation: rotateY 1s .5s ease forwards;
+}
+
+.mat-card:nth-child(3) {
+  animation: rotateY 1.5s .5s ease forwards;
+}
+
+.mat-card:nth-child(4) {
+  animation: rotateY 2s .5s ease forwards;
+}
+
+.mat-card:nth-child(5) {
+  animation: rotateY 2.5s .5s ease forwards;
+}
+
+.mat-card:nth-child(6) {
+  animation: rotateY 3s .5s ease forwards;
+}
+
+@keyframes rotateY {
+  to {
+    transform: rotateY(0);
+  }
+}
+
 button {
   margin: auto 0;
+}
+
+
+
+
+
+
+/* весь контейнер поддерживает перспективу */
+.flip-container {
+  perspective: 1000;
+}
+
+/* переверните сторону при проведении мышью */
+.flip-container:hover .flipper,
+.flip-container.hover .flipper {
+  transform: rotateY(180deg);
+}
+
+.flip-container,
+.front,
+.back {
+  width: 320px;
+  height: 480px;
+  border: 1px solid black;
+}
+
+/* здесь находится скорость перевертывания */
+.flipper {
+  transition: 0.6s;
+  transform-style: preserve-3d;
+
+  position: relative;
+}
+
+/* скройте обратную сторону во время переворота */
+.front,
+.back {
+  backface-visibility: hidden;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+/* лицевая сторона размещена над обратной */
+.front {
+  z-index: 2;
+}
+
+/* обратная, изначально скрытая сторона */
+.back {
+  transform: rotateY(180deg);
 }
