--- a/practice/src/app/films-catalog/main/main.component.html
+++ b/practice/src/app/films-catalog/main/main.component.html
@@ -19,7 +19,7 @@
         <button mat-stroked-button routerLink="/actors">Посмотреть всех актеров</button>
       </div>
       <div class="wrap-mat-card" fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
-        <mat-card class="mb-2em flipper  film-mat-card" fxFlex="15%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%"
+        <mat-card class="mb-2em flipper actor-mat-card" fxFlex="15%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%"
           *ngFor="let actor of actors">
           <div class="front">
             <img src="{{imgUrl + actor.profile_path}}" alt="">
