--- a/practice/src/app/films-catalog/films-list/films-list.component.scss
+++ b/practice/src/app/films-catalog/films-list/films-list.component.scss
@@ -1,4 +1,16 @@
 .cards-section {
+  &::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url(../../../assets/bg-main.png);
+    background-size: cover;
+    background-repeat: inherit;
+    background-position: 10%;
+    opacity: 0.1;
+  }
+
   .cards {
     margin: 0 auto;
     max-width: 1200px;
