--- a/practice/src/app/films-catalog/main/main.component.scss
+++ b/practice/src/app/films-catalog/main/main.component.scss
@@ -1,5 +1,17 @@
 .cards-section {
   display: flex;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url(../../../assets/bg-main.png);
+    background-size: cover;
+    background-repeat: inherit;
+    background-position: 10%;
+    opacity: 0.1;
+  }
 
   >div {
     margin: auto;
@@ -7,10 +19,10 @@
     width: 100%;
 
     >div {
-      margin-bottom: 50px;
+      margin-bottom: 60px;
 
       >div:first-child {
-        margin-bottom: 25px;
+        margin-bottom: 30px;
       }
     }
 
@@ -67,7 +79,7 @@
 }
 
 
-
+// actor cards with animation
 .actor-mat-card:nth-child(1) {
   left: 14%;
   top: 10%;
@@ -159,7 +171,7 @@
   }
 }
 
-
+// ----
 
 .wrap-mat-card {
   height: 300px;
@@ -169,8 +181,7 @@
 .mat-card {
   padding: .5%;
   margin: 0;
-  height: 280px;
-  // transform: rotateY(180deg);
+  height: 280px;  
 
   div {
     width: 100%;
@@ -202,33 +213,7 @@
   }
 }
 
-// .mat-card:nth-child(1) {
-//   animation: rotateY .5s 2s ease forwards;
-// }
 
-// .mat-card:nth-child(2) {
-//   animation: rotateY .5s 2.2s ease forwards;
-// }
-
-// .mat-card:nth-child(3) {
-//   animation: rotateY .5s 2.4s ease forwards;
-// }
-
-// .mat-card:nth-child(4) {
-//   animation: rotateY .5s 2.6s ease forwards;
-// }
-
-// .mat-card:nth-child(5) {
-//   animation: rotateY .5s 2.8s ease forwards;
-// }
-
-// .mat-card:nth-child(6) {
-//   animation: rotateY .5s 3s ease forwards;
-// }
-
-// .mat-card:nth-child(7) {
-//   animation: rotateY .5s 3.2s ease forwards;
-// }
 
 
 
@@ -239,11 +224,6 @@ button {
   font-size: 12px;
 
 }
-
-
-
-
-
 
 
 
@@ -260,6 +240,3 @@ button {
 }
 
 
-// .front {
-//   z-index: 2;
-// }
