--- a/practice/src/app/shared/components/film-item/film-item.component.scss
+++ b/practice/src/app/shared/components/film-item/film-item.component.scss
@@ -19,10 +19,12 @@
 .cards>div:first-child {
   width: 50%;
   display: flex;
+  z-index: 5;
 }
 
 .cards>div:last-child {
   width: 50%;
+  background: #fff;
 }
 
 .cards img {
